only mpeg1/2 supported for rtp and udp output because of low delay forcing in ffmpeg
Using anything but mpeg1/2 and RTP or UDP output will fail using recent FFmpeg (might affect more combinations). This was tested against 20061123-1759. This is a major regression. A fairly recent version from 20061102 still works ok.
ffmpeg warning: low delay forcing is only available for mpeg1/2
(mpeg4@03B4CEB0)
ffmpeg error: cannot open encoder
main warning: no encoder module matching "ffmpeg" could be loaded
FFmpeg revision 7008 (commit date 20061113) adds this check:http://svn.mplayerhq.hu/ffmpeg/trunk/libavcodec/mpegvideo.c?r1=6995&r2=7008&pathrev=7008