Use LOW_DELAY only with MPEG1/2. Closes #864